@@ -22,7 +22,6 @@ import java.util.Arrays;
 import java.util.Optional;
 import java.util.stream.Stream;
 
-import org.unix.dlfcn_h;
 import static java.lang.foreign.Linker.*;
 import static java.lang.foreign.ValueLayout.*;
 
@@ -37,30 +36,9 @@ final class RuntimeHelper {
     final static SegmentAllocator CONSTANT_ALLOCATOR =
             (size, align) -> MemorySegment.allocateNative(size, align, MemorySession.openImplicit());
 
-    // looks up symbols using dlsym - manual change
-    private static SymbolLookup dlopenLookup(String libraryName) {
-        System.out.println("loading " + libraryName);
-        var globalScope = MemorySession.global();
-        try (var openScope = MemorySession.openConfined()) {
-            var openScopeAllocator = openScope;
-            final MemoryAddress handle = dlfcn_h.dlopen(openScopeAllocator.allocateUtf8String(libraryName), dlfcn_h.RTLD_LOCAL());
-            if (handle == MemoryAddress.NULL) {
-                throw new IllegalArgumentException("Cannot find library: " + libraryName);
-            }
-            globalScope.addCloseAction(() -> dlfcn_h.dlclose(handle));
-            return name -> {
-                var allocator = SegmentAllocator.newNativeArena(globalScope);
-                MemoryAddress addr = dlfcn_h.dlsym(handle, allocator.allocateUtf8String(name));
-                return addr == MemoryAddress.NULL ?
-                            Optional.empty() : Optional.of(MemorySegment.ofAddress(addr, 0, globalScope));
-            };
-        }
-    }
-
-    static {
-        // manual change
-        SymbolLookup dlopenLookup = dlopenLookup(System.getProperty("java.home") + "/lib/libjimage.dylib");
-        SYMBOL_LOOKUP = name -> dlopenLookup.lookup(name).or(() -> LINKER.defaultLookup().lookup(name));
+    static {        
+        SymbolLookup loaderLookup = SymbolLookup.libraryLookup("/w/lt/jdk/dev/build/linux-x86_64-server-release/images/jdk/lib/libjimage.so", MemorySession.global());
+        SYMBOL_LOOKUP = name -> loaderLookup.lookup(name).or(() -> LINKER.defaultLookup().lookup(name));
     }
 
     static <T> T requireNonNull(T obj, String symbolName) {
